<resources>

    <string name="app_name">WellWork</string>
    <string name="workwell">WorkWell</string>
    <string name="title_info">Information</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Preferences</string>
    <string name="humid_button">Humidity</string>
    <string name="temp_button">Temperature</string>
    <string name="dist_button">Screen Distance</string>
    <string name="humid_text">30%</string>
    <string name="temp_text">30°C</string>
    <string name="dist_text">100</string>
    <string name="dist_title">Distance</string>
    <string name="settings_title">Preferences</string>
    <string name="save_button">Save</string>
    <string name="humid_set_text">30%</string>
    <string name="humid_set_text1">10%</string>
    <string name="humid_set_text2"> - </string>
    <string name="dist_set_text">30 cm</string>
    <string name="humid_set_img">Humidity range preferences</string>
    <string name="dist_set_img">Distance range preferences</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>